# cryptocandles

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  table.sql
cryptocandles/: candlestick.py  main.py  settings.py  utils.py
cryptocandles/tests/: candlestick_test.py
