[tool.poetry]
name = "Smarttbot Test"
version = "0.1.0"
description = ""
authors = ["Lucas <lucasmarcelz20@gmail.com>"]
packages = [
    { include = "cryptocandles" },
    { include = "cryptocandles/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
requests = "^2.27.1"
pytest = "^6.2.5"
pydantic-argparse = "^0.4.0"
mysql-connector = "^2.2.9"
PyMySQL = {extras = ["rsa"], version = "^1.0.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cryptocandles.main:start"
